[package]
name = "nerf"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
eyre = "0.6.12"
lazy_static = "1.5.0"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.137"
shellexpand = "3.1.0"
